BACKLOG-21377: Fix langauge selection and validation. Add refresh button for visibility rules.

--- a/src/javascript/ContentEditor/editorTabs/AdvancedOptions/Visibility/DateTime/DateTime.scss
+++ b/src/javascript/ContentEditor/editorTabs/AdvancedOptions/Visibility/DateTime/DateTime.scss
@@ -12,3 +12,11 @@
     align-items: baseline;
     padding: var(--spacing-medium);
 }
+
+.rowSwitch {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: var(--spacing-small);
+    justify-content: flex-start;
+    align-items: center;
+}
